--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <h1 class="heading">How did we do?</h1>
             <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
             <ul class="rating">
-                <li><button class="rate-btn" name="rate" id= "rate" value="1">1</button></li>
-                <li><button class="rate-btn" name="rate" id= "rate" value="2">2</button></li>
-                <li><button class="rate-btn" name="rate" id= "rate" value="3">3</button></li>
-                <li><button class="rate-btn" name="rate" id= "rate" value="4">4</button></li>
-                <li><button class="rate-btn" name="rate" id= "rate" value="5">5</button></li>
+                <li><button class="rate-btn" name="rate" value="1">1</button></li>
+                <li><button class="rate-btn" name="rate" value="2">2</button></li>
+                <li><button class="rate-btn" name="rate" value="3">3</button></li>
+                <li><button class="rate-btn" name="rate" value="4">4</button></li>
+                <li><button class="rate-btn" name="rate" value="5">5</button></li>
             </ul>
             <button class="submit" id="submit" type="submit">Submit</button>
         </div>
